<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/blocking"
        android:background="@drawable/press_effect"
        android:padding="@dimen/blocking_layout_margin"
        android:clickable="true">

        <ImageView
            android:id="@+id/switch_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/switchon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/switch_on"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blocking"
                android:textColor="@color/black"
                android:textSize="@dimen/top_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blocking_below"
                android:textColor="@color/text_below"
                android:textSize="@dimen/bottom_text" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/press_effect"
        android:padding="@dimen/blocking_layout_margin"
        android:id="@+id/private_number"
        android:clickable="true">

        <ImageView
            android:id="@+id/private_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/check" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/private_switch"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/private_no"
                android:textColor="@color/black"
                android:textSize="@dimen/top_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/private_block"
                android:textColor="@color/text_below"
                android:textSize="@dimen/bottom_text" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/press_effect"
        android:padding="@dimen/blocking_layout_margin"
        android:id="@+id/unknown_number"
        android:clickable="true">

        <ImageView
            android:id="@+id/unknown_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/check" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/unknown_switch"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:textColor="@color/black"
                android:textSize="@dimen/top_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/block_all"
                android:textColor="@color/text_below"
                android:textSize="@dimen/bottom_text" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/press_effect"
        android:padding="@dimen/blocking_layout_margin"
        android:id="@+id/all_calls"
        android:clickable="true">

        <ImageView
            android:id="@+id/all_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/check" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/all_switch"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_calls"
                android:textColor="@color/black"
                android:textSize="@dimen/top_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/call_block"
                android:textColor="@color/text_below"
                android:textSize="@dimen/bottom_text" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/press_effect"
        android:padding="@dimen/blocking_layout_margin"
        android:id="@+id/white_list"
        android:clickable="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/whitelist"
                android:textColor="@color/black"
                android:textSize="@dimen/top_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/never_block"
                android:textColor="@color/text_below"
                android:textSize="@dimen/bottom_text" />

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>