<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:layout_below="@+id/toolbar"></FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/blocking_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/txt_blocking"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/blocking_file"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/blocking"
                android:textAllCaps="true"
                android:textColor="@drawable/text_color"
                android:textSize="12dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/blacklist_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/txt_blcklist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/blacklist_file"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/blacklist"
                android:textAllCaps="true"
                android:textColor="@drawable/text_color"
                android:textSize="12dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/log_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/txt_log"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/log_file"
                android:gravity="center_horizontal|center_vertical"
                android:padding="8dp"
                android:text="@string/log"
                android:textAllCaps="true"
                android:textColor="@drawable/text_color"
                android:textSize="12dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/more_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/txt_more"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/morefeature_file"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/more_feature"
                android:textAllCaps="true"
                android:textColor="@drawable/text_color"
                android:textSize="12dp" />


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>